Bug #35107 maria-preload.test is disabled because unrepeatable page cache statistics
Submitted: 6 Mar 2008 14:20 Modified: 3 Jul 2008 23:03
Reporter: Guilhem Bichot
Status: Closed
Category:Server: Maria Severity:S3 (Non-critical)
Version:5.1-maria OS:Any
Assigned to: Guilhem Bichot Target Version:5.1+
Triage: D3 (Medium) / R1 (None/Negligible) / E2 (Low)

[6 Mar 2008 14:20] Guilhem Bichot
Description:
Due to BUG#34911 (mostly) and BUG#35030, this test has to be disabled.

How to repeat:
look at disabled.def
[19 Mar 2008 17:51] Guilhem Bichot
And if BUG#34911 is never fixed, we'll have to use
select * from GLOBAL_STATUS where VARIABLE_NAME like "MARIA_PAGECACHE_READ%";
and compute differences between runs.
[2 Jun 2008 21:17] Guilhem Bichot
In latest tree it causes an assertion failure.
Run as ./mtr --enable-disabled maria-preload.
[11 Jun 2008 17:59] Guilhem Bichot
http://lists.mysql.com/maria/65 contains patch. Note question for reviewer in it.
[28 Jun 2008 17:13] Michael Widenius
Agree that there is a concurrency problem with concurrent running INSERT ... SELEC T and
other SELECT / WRITE while we are doing an index repair.

As a temporarly solution I changed for Maria tables that INSERT ... SELECT, REPLACE
SELECT and LOAD DATA takes an INSERT lock and thus blocks concurrent inserts/selects.

With this fix in place, it's ok to push your bug fix. Lets revise this when the above
condition is lifed in Maria 2.0
[30 Jun 2008 12:03] Guilhem Bichot
assertion is fixed. Test still not enabled because of unrepeatable output.
[30 Jun 2008 19:59] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:01] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:02] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:03] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:04] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:06] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:07] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:09] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:10] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:11] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:12] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:14] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:14] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:25] Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:36] Bugs System
Pushed into 5.1.25-maria-alpha
[3 Jul 2008 23:03] Guilhem Bichot
http://lists.mysql.com/maria/102

Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html
[24 Jul 2008 10:26] Bugs System
Pushed into 6.0.7-alpha  (revid:kpettersson@mysql.com-20080724082624-59z1hc8un6mxdb46)
(pib:2)
[25 Jul 2008 17:02] Bugs System
Pushed into 6.0.7-alpha  (revid:kpettersson@mysql.com-20080724143310-cfetpiuk5yusjcu1)
(pib:2)
[14 Sep 2008 2:39] Bugs System
Pushed into 6.0.7-alpha  (revid:guilhem@mysql.com-20080703210213-8cba44sg5b4g4heh)
(version source revid:vvaintroub@mysql.com-20080804094710-jb2qpqxpf2ir2gf3) (pib:3)