Fix for BUG#35107 "maria-preload.test is disabled because causes assertion". maria-preload will be re-enabled later because other pieces of it have possibly random output.

storage/maria/ma_check.c:
  Fix for BUG#35107 "maria-preload.test is disabled because causes assertion".